--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Android App</string>
+    <string name="happy_birthday_text">Happy Birthday you!</string>
+    <string name="signature_text">From Nam Thai</string>
 </resources>
